--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -80,7 +80,7 @@
                 android:backgroundTint="@color/secondaryDarkColor"
                 android:text="@string/textoBotonAcercaDe"
                 android:textColor="@color/primaryTextColor"
-                app:layout_constraintBottom_toTopOf="@+id/BTNsALIR"
+                app:layout_constraintBottom_toTopOf="@+id/btnSalir"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <Button
-                android:id="@+id/BTNsALIR"
+                android:id="@+id/btnSalir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
