--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_setting"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/textoBotonAcercaDe"
+        android:title="@string/textoBotonConfig"
         app:showAsAction="never" />
     <item
         android:id="@+id/acercaDe"
