--- a/app/src/main/res/layout/elemento_vista.xml
+++ b/app/src/main/res/layout/elemento_vista.xml
@@ -8,14 +8,13 @@
 
     <ImageView
         android:id="@+id/icono"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="?android:attr/listPreferredItemHeight"
+        android:layout_height="match_parent"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/titulo"
